exports[`Is loading component should be loading if any data loaders are loading 1`] = `
Object {
  "isLoading": true,
  "renderCount": 1,
}
`;

exports[`Is loading component should be loading if any data loaders are loading 2`] = `
Object {
  "dataLoader": Object {
    "data": Object {
      "testDataType": Object {
        "testKey": Object {
          "completed": false,
          "dataFromServerSideRender": false,
          "failed": false,
          "loading": true,
        },
      },
    },
    "loadingCount": 1,
  },
}
`;

exports[`Is loading component should be loading if one of two have finished loading 1`] = `
Object {
  "isLoading": true,
  "renderCount": 2,
}
`;

exports[`Is loading component should be loading if one of two have finished loading 2`] = `
Object {
  "dataLoader": Object {
    "data": Object {
      "testDataType": Object {
        "testKey": Object {
          "completed": true,
          "data": Object {
            "result": "Foo!",
          },
          "dataFromServerSideRender": false,
          "failed": false,
          "loading": false,
        },
        "testKey2": Object {
          "completed": false,
          "dataFromServerSideRender": false,
          "failed": false,
          "loading": true,
        },
      },
    },
    "loadingCount": 1,
  },
}
`;

exports[`Is loading component should not be loading once all data loaders have completed 1`] = `
Object {
  "isLoading": false,
  "renderCount": 3,
}
`;

exports[`Is loading component should not be loading once all data loaders have completed 2`] = `
Object {
  "dataLoader": Object {
    "data": Object {
      "testDataType": Object {
        "testKey": Object {
          "completed": true,
          "data": Object {
            "result": "Foo!",
          },
          "dataFromServerSideRender": false,
          "failed": false,
          "loading": false,
        },
        "testKey2": Object {
          "completed": true,
          "data": Object {
            "result": "Foo2!",
          },
          "dataFromServerSideRender": false,
          "failed": false,
          "loading": false,
        },
      },
    },
    "loadingCount": 0,
  },
}
`;
